--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+BeautifulSoup==3.2.1
 Flask==0.8
 Jinja2==2.6
 Pygments==1.5
 Sphinx==1.1.3
 Werkzeug==0.8.3
 argparse==1.2.1
+certifi==0.0.8
+chardet==1.0.1
 docutils==0.8.1
+gevent==0.13.7
+greenlet==0.3.4
+ipython==0.12
+matplotlib==1.1.0
+networkx==1.6
 numpy==1.6.1
+requests==0.11.1
 wsgiref==0.1.2
-BeautifulSoup
-requests
-networkx
